--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>com.mycompany.foodstudiesconnection.MainApp</mainClass>
+        <mainClass>com.mycompany.foodstudiesconnection.Main</mainClass>
     </properties>
 
     <organization>
